	PR middle-end/53089 	* cgraphunit.c (referred_to_p): Move ahead in file to avoid forward declaration. 	(cgraph_finalize_function): Finalize them here. 	* symtab.c (dump_symtab): Dump ctors and dtors.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@186820 138bc75d-0d04-0410-961f-82ee72b054a4